--- a/telecom-ui/src/index.css
+++ b/telecom-ui/src/index.css
@@ -22,11 +22,11 @@ select {
 }
 button {
   padding: 8px 16px;
-  background-color: #0077cc;
+  background-color: #222;
   color: white;
   border: none;
   cursor: pointer;
 }
 button:hover {
-  background-color: #005fa3;
+  background-color: rgb(82, 76, 76);
 }
